--- a/Styles/main.css
+++ b/Styles/main.css
@@ -52,7 +52,7 @@ main .info .slider .fill {
   background-image: linear-gradient(90deg, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
   border-radius: 20px;
   position: relative;
-  animation: increase 2s ease;
+  animation: increase 1s ease;
 }
 main .info .slider .fill::after {
   content: "";
@@ -132,7 +132,7 @@ footer .attribution a {
 @media screen and (max-width: 425px) {
   body {
     background-image: url(../images/bg-mobile.png);
-    grid-template-rows: 0.9fr 0.3fr;
+    grid-template-rows: min-content;
     background-size: cover;
     background-position: center;
   }
